# YouCpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/: GoogleAuth.cpp  GoogleAuth.h  YouTubeService.cpp  YouTubeService.h
src/ui/: MainWindow.cpp  MainWindow.h  TranscriptWindow.cpp  TranscriptWindow.h
